Installed Balm UI

--- a/front-end/tsconfig.app.json
+++ b/front-end/tsconfig.app.json
@@ -6,7 +6,9 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "balm-ui-plus": ["./node_modules/balm-ui/dist/balm-ui-plus.d.ts"],
+      "balm-ui-css": ["./node_modules/balm-ui/dist/balm-ui.css"],
     }
   }
 }
