--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,7 +16,8 @@
     "balm-ui": "^10.6.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vuestic-ui": "^1.4.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -32,8 +33,10 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "sass": "^1.52.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.2",
     "vite": "^2.9.9",
